# FlaxMaskRCNN

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_TASKS.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README.md  SCENIC_NOTES.md  TODO.md  TRAINING_MIGRATION.md  pyproject.toml  test_training.py  train.py  train_raw_jax.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pre-commit-update.yml
detectax/evaluation/: coco_evaluator.py
detectax/models/: __init__.py
detectax/models/backbones/: resnet.py
detectax/models/heads/: __init__.py  (+1 more)
detectax/training/: __init__.py  schedules.py  train.py
detectrax/evaluation/: __init__.py  coco_evaluator.py
docs/: architecture.md  benchmarks.md  datasets.md  why_jax.md
ml_collections/: __init__.py
reference/visdet_datasets/: base_det_dataset.py  coco.py
tasks/: create_all_tasks.py  create_remaining_tasks.sh  run_wave_1.sh  run_wave_2.sh  run_wave_3.sh
tasks/sprint_1/: run_parallel_tasks.sh
tests/: __init__.py  conftest.py  test_anchor_generator.py  test_augmentations.py  test_bbox_head.py  test_box_coder.py  test_coco_evaluator.py  test_components.py  test_detection_assigner.py  test_detection_loss.py  test_detection_postprocessor.py  test_fpn.py  test_iou.py  test_mask_head.py  test_mask_loss.py  test_mask_postprocess.py  test_mask_targets.py  test_nms.py  test_proposal_generator.py  test_roi_head.py  test_rpn_assigner.py  test_rpn_head.py  test_rpn_loss.py  test_schedules.py  test_training_loop.py
(+79 files in other folders)
